--- a/src/Acme/NewsBundle/Resources/views/View/inc/supplemental_news.html.twig
+++ b/src/Acme/NewsBundle/Resources/views/View/inc/supplemental_news.html.twig
@@ -1,10 +1,10 @@
 <section class="moreread col-xs-10 col-xs-offset-1" aria-labelledby="moreh1">
     <h1 id="moreh1">Еще почитать:</h1>
-{% for news if newsSet %}
+{% for news in newsSet %}
     <article>
         <time datetime="{{ news.createdAt|date('d.m.Y H:i') }}">{{ news.createdAt|date('d.m.Y H:i') }}</time>
-        {{ news.excerpt }}
-        <a href="{{ path('acme_full_news', {'newsId': news.id}) }}" rel="bookmark">Читать новость полностью &raquo;</a>
+        {{ news.excerpt|raw }}
+        <a href="{{ path('acme_news_full_news', {'newsId': news.id}) }}" rel="bookmark">Читать новость полностью &raquo;</a>
     </article>
 
 {% endfor %}
