--- a/src/Acme/NewsBundle/Resources/views/View/list.xml.twig
+++ b/src/Acme/NewsBundle/Resources/views/View/list.xml.twig
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<list
-        xmlns="http://mm.this.biz/xml"
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://mm.this.biz/xml schema.xsd">
+<list xmlns="http://tzswivl.com/xml"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:noNamespaceSchemaLocation="http://tzswivl.com/xml schema.xsd">
 {% for news in newsEntitySet %}
     <item id="{{ news.id }}" date="{{ news.createdAt|date('d.m.Y H:i') }}">
         <announce><![CDATA[{{ news.excerpt }}]]></announce>
