Fix stub in title on full news page

--- a/src/Acme/NewsBundle/Resources/views/View/full_news.html.twig
+++ b/src/Acme/NewsBundle/Resources/views/View/full_news.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AcmeNewsBundle::layout.html.twig' %}
 
-{% block title %}News date | Новости | {{ parent() }}{% endblock %}
+{% block title %}{{ news.createdAt|date('d.m.Y H:i') }} | Новости | {{ parent() }}{% endblock %}
 
 {% block header_navbar %}
     <li><a href="{{ path('acme_news_list') }}">HTML list</a></li>
