--- a/src/Acme/NewsBundle/Resources/views/View/inc/list_pagination.html.twig
+++ b/src/Acme/NewsBundle/Resources/views/View/inc/list_pagination.html.twig
@@ -46,7 +46,7 @@
                 </a>
             </li>
             <li>
-                <a href="{{ path('acme_news_list', {'page': lastPage}) }}" rel="last" aria-label="Последняя страница">
+                <a href="{{ path('acme_news_list', {'page': lastPage}) }}" aria-label="Последняя страница">
                     <span aria-hidden="true">&raquo;</span>
                 </a>
             </li>
