--- a/src/Acme/NewsBundle/Resources/public/css/style.css
+++ b/src/Acme/NewsBundle/Resources/public/css/style.css
@@ -25,6 +25,14 @@ section.col-xs-9 {
     border-bottom: 1px #dddddd solid;
 }
 
+h2.col-xs-3, article h1 {
+    font-family: Georgia,"Times New Roman",Times,serif;
+    font-size: 16px;
+    margin: 0 auto;
+    line-height: 1.42857;
+    font-weight: normal;
+}
+
 .col-xs-3 time {
     display: block;
     text-align: right;
@@ -64,7 +72,7 @@ nav.newsnav {
     margin: 22px auto auto auto;
 }
 
-.moreread h1 {
+.moreread h2 {
     font-size: 20px;
     margin-bottom: 22px;
 }
