--- a/src/Acme/NewsBundle/Resources/views/View/inc/supplemental_news.html.twig
+++ b/src/Acme/NewsBundle/Resources/views/View/inc/supplemental_news.html.twig
@@ -1,8 +1,8 @@
 <section class="moreread col-xs-10 col-xs-offset-1" aria-labelledby="moreh1">
-    <h1 id="moreh1">Еще почитать:</h1>
+    <h2 id="moreh2">Еще почитать:</h2>
 {% for news in newsSet %}
     <article>
-        <time datetime="{{ news.createdAt|date('d.m.Y H:i') }}">{{ news.createdAt|date('d.m.Y H:i') }}</time>
+        <time datetime="{{ news.createdAt|date('Y-m-d H:i:s') }}">{{ news.createdAt|date('Y-m-d H:i:s') }}</time>
         {{ news.excerpt|raw }}
         <a href="{{ path('acme_news_full_news', {'newsId': news.id}) }}" rel="bookmark">Читать новость полностью &raquo;</a>
     </article>
