--- a/src/Acme/NewsBundle/Resources/views/View/list.html.twig
+++ b/src/Acme/NewsBundle/Resources/views/View/list.html.twig
@@ -18,13 +18,13 @@
 
 {% for news in newsEntitySet %}
             <article class="row">
-                <section class="col-xs-3">
-                    <time datetime="{{ news.createdAt|date('d.m.Y H:i') }}">{{ news.createdAt|date('d.m.Y H:i') }}</time>
-                </section>
-                <section class="col-xs-9">
+                <h2 class="col-xs-3">
+                    <time datetime="{{ news.createdAt|date('Y-m-d H:i:s') }}">{{ news.createdAt|date('Y-m-d H:i:s') }}</time>
+                </h2>
+                <div class="col-xs-9">
                     {{ news.excerpt|raw }}
                     <a href="{{ path('acme_news_full_news', {'newsId': news.id}) }}" rel="bookmark">Читать новость полностью &raquo;</a>
-                </section>
+                </div>
             </article>
 
 {% endfor %}
