--- a/src/Acme/NewsBundle/Resources/public/css/style.css
+++ b/src/Acme/NewsBundle/Resources/public/css/style.css
@@ -19,7 +19,7 @@ footer {
     font-weight: normal;
 }
 
-section.col-xs-9 {
+div.col-xs-9 {
     margin-bottom: 20px;
     padding-bottom: 20px;
     border-bottom: 1px #dddddd solid;
