--- a/src/Acme/NewsBundle/Resources/views/layout.html.twig
+++ b/src/Acme/NewsBundle/Resources/views/layout.html.twig
@@ -9,8 +9,8 @@
 
     {% block stylesheets %}
     <!-- link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" -->
-    <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
-    <link href="{{ asset('css/style.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="{{ asset('bundles/acmenews/css/bootstrap.min.css') }}">
+    <link href="{{ asset('bundles/acmenews/css/style.css') }}" rel="stylesheet">
     {% endblock %}
 
     {% block javascripts_top %}
